<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notifications"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_menu_plan"
            android:title="@string/nav_plan" />
        <!--<item-->
            <!--android:id="@+id/nav_family"-->
            <!--android:icon="@drawable/ic_menu_family"-->
            <!--android:title="@string/nav_family" />-->
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_history" />

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/nav_search" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/nav_account" />


    </group>
</menu>
